Fix emoji alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -29,6 +29,12 @@ img {
   vertical-align: bottom;
 }
 
+img.emoji {
+  display: inline;
+  margin: 0;
+  vertical-align: text-top;
+}
+
 sup {
   font-feature-settings: "sups" 1;
 }
